RESOLVED FIXED277859
[Cocoa] audioTrack.configuration() missing values for WebM files
https://bugs.webkit.org/show_bug.cgi?id=277859
Summary [Cocoa] audioTrack.configuration() missing values for WebM files
Jer Noble
Reported 2024-08-09 08:57:48 PDT
[Cocoa] audioTrack.configuration() missing values for WebM files
Attachments
Jer Noble
Comment 1 2024-08-09 09:06:52 PDT
Radar WebKit Bug Importer
Comment 2 2024-08-09 09:07:07 PDT
EWS
Comment 3 2024-08-15 15:12:03 PDT
Committed 282311@main (8d1b2782970a): <https://commits.webkit.org/282311@main> Reviewed commits have been landed. Closing PR #31948 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.