[Cocoa] audioTrack.configuration() missing values for WebM files https://bugs.webkit.org/show_bug.cgi?id=277859 <rdar://problem/133545263>

Reviewed by Eric Carlson.

Ensure the AudioTrackPrivateWebM's configuration is update upon creation.

* LayoutTests/media/track/audio-track-configuration-webm-expected.txt: Added.
* LayoutTests/media/track/audio-track-configuration-webm.html: Added.
* Source/WebCore/platform/graphics/cocoa/AudioTrackPrivateWebM.cpp:
(WebCore::AudioTrackPrivateWebM::AudioTrackPrivateWebM):

Canonical link: https://commits.webkit.org/282311@main